2013-06-04  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/Build (DRTI_OBJ): Always build -fPIC.

2013-06-03  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_program.c (dtrace_program_header): Emit missing
	#include.

2013-05-22  Nick Alcock  <nick.alcock@oracle.com>

	Breakpoint notifiers.

	* libproc/libproc.h (Pbkpt_notifier): New prototype.
	* libproc/Pcontrol.h (bkpt_handler_t.notifier_list): New, this is
	sometimes now kept in a list.
	(bkpt_t.bkpt_notifiers): The list (of notifiers).
	* libproc/Pcontrol.c (Pbkpt): Rename to...
	(add_bkpt): ... this, and add is_notifier argument and optional
	addition to the notifier list.
	(Pbkpt): Re-express as wrapper around add_bkpt.
	(Pbkpt_notifier): New function, wrapper around add_bkpt.
	(Punbkpt): Refactor out cleanup calls and bkpt freeing into...
	(delete_bkpt_handler): ... this new function.  Add notifier
	cleanup calls and freeing.
	(bkpt_flush): Use it rather than open-coding the cleanup.
	(bkpt_handle_start): Call the notifiers, if any.  Don't call the
	handler if there is none.
	(bkpt_handle_post_singlestep): Likewise, for post-singlestep
	breakpoints.

	* libproc/rtld_db.c (rd_start_trap): Now a notifier, returning void.
	(rd_exec_handler): Add it with Pbkpt_notifier(), not Pbkpt().
	(rd_new): Likewise.

	Post-handler breakpoint removal.

	* libproc/Pcontrol.h (bkpt_t.in_handler): New, true if this handler
	is executing now.
	(bkpt_t.pending_removal): New, true if Punbkpt() was called while
	in-handler.
	* libproc/Pcontrol.c (Punbkpt): Set pending_removal iff
	in_handler, rather than unhashing or removing the breakpoint.
	(bkpt_handle_start): Set in_handler around handler calls.  Call
	Punbkpt() afterwards iff pending_removal.
	(bkpt_handle_post_singlestep): Likewise.

	evaltime={preinit,postinit,main} implementation.

	* libproc/Pcontrol.h (Pgetauxval): Move this prototype...
	* libproc/libproc.h: ... to here.
	(rt_proc_t.dpr_rtld): Remove, unused.